fix: dataset list overlay covers all

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -13,6 +13,15 @@ $header-font-size: .9rem;
   flex-direction: column;
   height: 100%;
 
+  .overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    opacity: 0.4;
+    z-index: 110;
+  }
+
   .header {
     height: 50px;
     background-color: #315379;
@@ -117,6 +126,7 @@ $header-font-size: .9rem;
     }
 
     .header-column-arrow {
+      flex-shrink: 0;
       height: 100%;
       width: 32px;
       margin-left: 9px;
@@ -185,7 +195,7 @@ $header-font-size: .9rem;
         height: 100%;
         width: 10px;
         cursor: ew-resize;
-        z-index: 10;
+        z-index: 112;
       }
     }
 
@@ -194,15 +204,6 @@ $header-font-size: .9rem;
       position: relative;
       flex-basis: auto;
       overflow: hidden;
-
-      .overlay {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        background-color: #000;
-        opacity: 0.4;
-        z-index: 110;
-      }
 
       .main-content {
         position: relative;
@@ -270,6 +271,7 @@ $header-font-size: .9rem;
     }
 
     &.expanded {
+      z-index: 111;
       color: #383838;
     }
 
@@ -279,6 +281,7 @@ $header-font-size: .9rem;
   }
 
   .dataset-list {
+    z-index: 110;
     position: absolute;
     top: 0;
     bottom: 0;
